lets check the website

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -122,7 +122,7 @@ a {
   font-size: 0.9rem;
   color: #383e41;
   background-color: #f3f6fa;
-  background-image: url(selfpose.png);
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true);
   border-radius: 0.3rem; }
 .about-me pre {
   padding: 0.8rem;
@@ -239,7 +239,7 @@ a {
   font-size: 0.9rem;
   color: #383e41;
   background-color: #f3f6fa;
-  background-image: url(drawing.jpg);
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true);
   border-radius: 0.3rem; }
 .resume pre {
   padding: 0.8rem;
