tried background image elsewhere did it work?

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -281,7 +281,7 @@ a {
   overflow: initial;
   line-height: inherit;
   word-wrap: normal;
-  background-color: transparent;
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true);
   border: 0; }
   .resume pre code:before, .resume pre code:after, .resume pre tt:before, .resume pre tt:after {
     content: normal; }
@@ -321,7 +321,7 @@ a {
   height: 2px;
   padding: 0;
   margin: 1rem 0;
-  background-color: #eff0f1;
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true);
   border: 0; }
 
 @media screen and (min-width: 64em) {
