--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -105,6 +105,9 @@ a {
   .project-tagline {
     font-size: 1rem; } }
 
+.about-me {
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true)
+}
 .about-me :first-child {
   margin-top: 0; }
 .about-me img {
@@ -122,7 +125,6 @@ a {
   font-size: 0.9rem;
   color: #383e41;
   background-color: #f3f6fa;
-  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true);
   border-radius: 0.3rem; }
 .about-me pre {
   padding: 0.8rem;
@@ -132,7 +134,6 @@ a {
   color: #567482;
   word-wrap: normal;
   background-color: #f3f6fa;
-  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true);
   border: solid 1px #dce6f0;
   border-radius: 0.3rem; }
   .about-me pre > code {
@@ -142,7 +143,7 @@ a {
     color: #567482;
     word-break: normal;
     white-space: pre;
-    background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true);
+    background: transparent;
     border: 0; }
 .about-me .highlight {
   margin-bottom: 1rem; }
@@ -223,6 +224,9 @@ a {
     padding: 2rem 1rem;
     font-size: 1rem; } }
 
+.resume {
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true)
+}
 .resume :first-child {
   margin-top: 0; }
 .resume img {
@@ -240,7 +244,6 @@ a {
   font-size: 0.9rem;
   color: #383e41;
   background-color: #f3f6fa;
-  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true);
   border-radius: 0.3rem; }
 .resume pre {
   padding: 0.8rem;
@@ -250,7 +253,6 @@ a {
   color: #567482;
   word-wrap: normal;
   background-color: #f3f6fa;
-  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true);
   border: solid 1px #dce6f0;
   border-radius: 0.3rem; }
   .resume pre > code {
@@ -260,7 +262,7 @@ a {
     color: #567482;
     word-break: normal;
     white-space: pre;
-    background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true);
+    background: transparent;
     border: 0; }
 .resume .highlight {
   margin-bottom: 1rem; }
@@ -281,7 +283,7 @@ a {
   overflow: initial;
   line-height: inherit;
   word-wrap: normal;
-  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true);
+  background-color: transparent;
   border: 0; }
   .resume pre code:before, .resume pre code:after, .resume pre tt:before, .resume pre tt:after {
     content: normal; }
@@ -321,7 +323,7 @@ a {
   height: 2px;
   padding: 0;
   margin: 1rem 0;
-  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/drawing.jpg?raw=true);
+  background-color: #eff0f1;
   border: 0; }
 
 @media screen and (min-width: 64em) {
