--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,8 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); 
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true);
+  /*background-image: linear-gradient(120deg, #155799, #159957); */
 }
 
 @media screen and (min-width: 64em) {
@@ -106,7 +107,7 @@ a {
     font-size: 1rem; } }
 
 .about-me {
-  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true)
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true);
 }
 .about-me :first-child {
   margin-top: 0; }
