--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,8 +57,11 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true)
-  background-position: bottom;
+  background-image: url(https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   /*background-image: linear-gradient(120deg, #155799, #159957); */
 }
 
