--- a/main.css
+++ b/main.css
@@ -8,3 +8,27 @@
   padding: 14px 10px;
   text-transform: uppercase;
 }
+
+.title {
+  background-image:url('http://goo.gl/04j7Nn');
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.title .container {
+  position: relative;
+  top:100px;
+}
+
+.title h1 {
+  color: #fff;
+  font-size: 48px;  
+  font-family: 'Shift', sans-serif;
+  font-weight: bold;
+}
+
+.title p {
+  font-size: 20px;
+  color: #fff;
+}
