new website, new me

--- a/main.css
+++ b/main.css
@@ -14,11 +14,11 @@
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
-  top:100px;
 }
 
-.title {
+.title .container {
+  position: relative;
+  top:100px;
 }
 
 .title h1 {
