--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
   display: inline;
 }
 .nav {
-  color: #5a5a5a;
+  color: #fff;
   font-size: 11px;
   font-weight: bold;
   padding: 14px 10px;
@@ -13,7 +13,7 @@
   background-image:url('https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true');
   height: 500px;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 .title .container {
@@ -31,4 +31,14 @@
 .title p {
   font-size: 20px;
   color: #fff;
+}
+
+.about-me {
+	color:#fff;
+}
+.resume {
+	color:#fff;
+}
+.contact-me {
+	color:#fff;
 }
