--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
   background-image:url('https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true');
   height: 500px;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   box-sizing: border-box;
 }
 
