--- a/main.css
+++ b/main.css
@@ -9,10 +9,10 @@
 }
 
 .title {
-  background-image:url('https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true');
+  /*background-image:url('https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true');*/
   height: 500px;
-  background-repeat: no-repeat;
-  background-size: cover;
+  /*background-repeat: no-repeat;*/
+  /*background-size: cover;*/
   box-sizing: border-box;
 }
 
