new website, new me

--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@
 }
 
 .title h1 {
-  color: #fff;
+  /*color: #fff;*/
   font-size: 48px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -30,7 +30,7 @@
 
 .title p {
   font-size: 20px;
-  color: #fff;
+  /*color: #fff;*/
 }
 
 .about-me {
