--- a/main.css
+++ b/main.css
@@ -2,8 +2,7 @@
   display: inline;
 }
 .nav {
-  font-size: 11px;
-  font-weight: bold;
+  background-color: #f0eceb;
   padding: 14px 10px;
   text-transform: uppercase;
 }
