--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
-.nav li {
+/*.nav li {
   display: inline;
-}
+}*/
 .nav {
   background-color: #f0eceb;
-  padding: 14px 1000px;
+  padding: 14px 30px;
   text-transform: uppercase;
 }
 
