--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3118,8 +3118,7 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: transparent;
 }
 .btn-primary:focus,
 .btn-primary.focus {
