--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
-/*.nav li {
+.nav li {
   display: inline;
 }
 .nav {
   background-color: #f0eceb;
   padding: 14px 30px;
   text-transform: uppercase;
-}*/
+}
 
 .title {
   /*background-image:url('https://github.com/vincent-escueta22/Website/blob/gh-pages/golden_gate.jpg?raw=true');*/
@@ -34,7 +34,8 @@
 
 .about-me {
 }
-.resume {
+.resume li {
+	display: inline;{
 }
 .contact-me li {
 	display: inline;
