--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@
 
 .title {
   background-image:url('Malibu.jpg');
-  height: 500px;
+  height: 100%;
+  width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
