new website, new me

--- a/main.css
+++ b/main.css
@@ -8,10 +8,10 @@
 }
 
 .title {
-  background-image:url('Malibu.jpg');
-  height: 100%;
-  width: 100%;
-  background-repeat: no-repeat;
+  background-image:url('Malibu.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 
