new website, new me

--- a/main.css
+++ b/main.css
@@ -8,11 +8,14 @@
 }
 
 .title {
-  background-image:url('Malibu.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-image:url('Malibu.jpg');
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .title .container {
@@ -31,6 +34,12 @@
   font-size: 20px;
   /*color: #fff;*/
 }
+
+/*@media screen and (max-width: 1024px) {  Specific to this particular image 
+  img.bg {
+    left: 50%;
+    margin-left: -512px;   /* 50% *d/
+  }*/
 
 .about-me {
 }
