--- a/main.css
+++ b/main.css
@@ -8,14 +8,9 @@
 }
 
 .title {
-  background-image:url('Malibu.jpg');
-  min-height: 100%;
-  min-width: 1024px;
-  width: 100%;
-  height: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
+  background-image:url('Malibu.jpg') no-repeat center center;
+  height: 100%;
+  background-size: cover;
 }
 
 .title .container {
@@ -34,12 +29,6 @@
   font-size: 20px;
   /*color: #fff;*/
 }
-
-/*@media screen and (max-width: 1024px) {  Specific to this particular image 
-  img.bg {
-    left: 50%;
-    margin-left: -512px;   /* 50% *d/
-  }*/
 
 .about-me {
 }
