--- a/main.css
+++ b/main.css
@@ -7,10 +7,7 @@
   text-transform: uppercase;
 }
 
-
-.title .title-body .container {
-  position: relative;
-  top:100px;
+/*.title {
   background-image:url('San_Francisco.jpg');
   min-height: 100%;
   min-width: 1024px;
@@ -18,6 +15,18 @@
   height: auto;
   background-repeat: no-repeat;
   background-size: cover;
+}*/
+
+.title { 
+  height: 100vh;
+  background-image:url('San_Francisco.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.title .title-body .container {
+  position: relative;
+  top:100px;
 }
 
 .title h1 {
