--- a/main.css
+++ b/main.css
@@ -1,19 +1,13 @@
 .nav li {
+  padding: 10px;
   display: inline;
 }
 .nav {
+  padding: 14px 30px;
   text-transform: uppercase;
 }
 
-/*.title {
-  background-image:url('San_Francisco.jpg');
-  min-height: 100%;
-  min-width: 1024px;
-  width: 100%;
-  height: auto;
-  background-repeat: no-repeat;
-  background-size: cover;
-}*/
+
 
 .title { 
   height: 100vh;
@@ -29,13 +23,13 @@
 
 .title h1 {
   /*color: #fff;*/
-  font-size: 48px;  
+  font-size: 100px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
 
 .title p {
-  font-size: 20px;
+  font-size: 40px;
   /*color: #fff;*/
 }
 
