--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@
 }
 
 .title h1 {
-  /*color: #fff;*/
+  color: #283018;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -30,7 +30,7 @@
 
 .title p {
   font-size: 30px;
-  /*color: #fff;*/
+  color: #283018;
 }
 
 .about-me {
