--- a/main.css
+++ b/main.css
@@ -51,14 +51,24 @@
 }
 
 .about-me h1 {
-  color: #000000;
+  color: white;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
 
 .about-me p {
-  font-size: 18px;
+  color: white;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
   color: #000000;
 }
 
