--- a/main.css
+++ b/main.css
@@ -51,25 +51,14 @@
 }
 
 .about-me h1 {
-  color: white;
-    text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000; 
+  color: #000000;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
 
 .about-me p {
-  color: white;
-    text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000; 
-  font-size: 20px;
+  font-size: 18px;
   color: #000000;
 }
 
