--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 .nav li {
-  /*padding: 14px 30px;*/
+  padding: 10px;
   display: inline;
 }
 .nav {
   color: #ffffff;
-  padding: 24px 30px;
+  padding: 14px 30px;
   text-transform: uppercase;
 }
 
