new website, new me

--- a/main.css
+++ b/main.css
@@ -42,12 +42,12 @@
 }
 
 .about-me .about-me-picture .container {
-  position: relative;
-  top:20px;
+  /*position: relative;*/
+  top:80px;
 }
 
 .about-me .about-me-body .container {
-  position: relative;
+  /*position: relative;*/
   top: 20px;
 }
 
