new website, new me

--- a/main.css
+++ b/main.css
@@ -46,10 +46,10 @@
   top:200px;
 }
 
-/*.about-me .about-me-body .container {
+.about-me .about-me-body .container {
   position: relative;
   top: 20px;
-}*/
+}
 
 .about-me h1 {
   color: #000000;
