--- a/main.css
+++ b/main.css
@@ -47,12 +47,15 @@
 .about-me .container {
   position: relative;
   top: 50px;
+  width: 80%;
+  height: 50%;
 }
 
 .about-me .container .row .about-me-picture{
   position: relative;
   top: 35px;
-  right: 0px;
+  width: 80%;
+  height: 50%;
 }
 
 .about-me h1 {
