--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
-
+  
 }
 
 .title p {
@@ -46,12 +46,12 @@
 }
 
 .about-me .container {
-  position: absolute;
+  position: relative;
   top: 50px;
 }
 
 .about-me .container .row .about-me-picture{
-  position: absolute;
+  position: relative;
   top: 35px;
   right: 0px;
 }
