--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
-  
+
 }
 
 .title p {
@@ -58,13 +58,13 @@
 
 .about-me h1 {
   color: #000000;
-  font-size: 60px;  
+  font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
 
 .about-me p {
-  font-size: 18px;
+  font-size: 5vw;
   color: #000000;
 }
 
