--- a/main.css
+++ b/main.css
@@ -50,13 +50,13 @@
   top: 50px;
 }
 
-.about-me .container .row .about-me-picture{
+.about-me .container .row .about-me-picture {
   position: relative;
   top: 35px;
   right: 0px;
 }
 
-.about-me img {
+.about-me .container .row .about-me-picture img {
   max-width: 100%;
   height: auto;
 }
