--- a/main.css
+++ b/main.css
@@ -63,13 +63,13 @@
 
 .about-me h1 {
   color: #000000;
-  font-size: 10vh;  
+  font-size: 10vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
 
 .about-me p {
-  font-size: 2.3vh;
+  font-size: 2.3vw;
   color: #000000;
 }
 
