--- a/main.css
+++ b/main.css
@@ -56,20 +56,20 @@
   right: 0px;
 }
 
-.about-me .container .row .about-me-picture img {
+/*.about-me .container .row .about-me-picture img {
   width: 100%;
   height: auto;
-}
+}*/
 
 .about-me h1 {
   color: #000000;
-  font-size: 10vw;  
+  font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
 
 .about-me p {
-  font-size: 2.3vw;
+  font-size: 1.25vw;
   color: #000000;
 }
 
