new website, new me

--- a/main.css
+++ b/main.css
@@ -56,10 +56,10 @@
   right: 0px;
 }
 
-/*.about-me .container .row .about-me-picture img {
+.about-me img {
   width: 100%;
   height: auto;
-}*/
+}
 
 .about-me h1 {
   color: #000000;
