--- a/main.css
+++ b/main.css
@@ -27,16 +27,18 @@
 
 .title h1 {
   color: #283018;
-  font-size: 72px;  
+  font-size: 7vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 
 }
+/*72px*/
 
 .title p {
-  font-size: 30px;
+  font-size: 3vw;
   color: #283018;
 }
+/*30px*/
 
 .about-me {
   height: 100vh;
