--- a/main.css
+++ b/main.css
@@ -89,7 +89,7 @@
 }
 
 .resume h1 {
-  color: #000000;
+  color: #ffffff;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -97,7 +97,7 @@
 
 .resume p {
   font-size: 30px;
-  color: #000000;
+  color: #ffffff;
 }
 
 .contact-me {
@@ -113,7 +113,7 @@
 }
 
 .contact-me h1 {
-  color: #000000;
+  color: #ffffff;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -121,6 +121,6 @@
 
 .contact-me p {
   font-size: 30px;
-  color: #000000;
+  color: #ffffff;
 }
 
