new website, new me

--- a/main.css
+++ b/main.css
@@ -1,6 +1,11 @@
 .nav li {
   display: inline;
 }
+
+.navbar-custom {
+    background-color: #000000;
+}
+
 .nav .navbar-header {
   font-size: 30px;
 }
