new website, new me

--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@
 
 .navbar-custom {
     background-color: #000000;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: #ffffff; 
 }
 
 .nav .navbar-header {
