--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 .nav .navbar-header {
   font-size: 30px;
 }
-.nav {
+.nav .container {
   color: #ffffff;
   padding: 14px 30px;
   text-transform: uppercase;
@@ -13,7 +13,6 @@
 
 .nav a{
   color: #ffffff;
-  padding: 14px 30px;
   font-size: 24;
   text-transform: uppercase;
 }
