new website, new me

--- a/main.css
+++ b/main.css
@@ -71,8 +71,8 @@
 }
 
 .about-me h1 {
-  color: #553f4b
-  font-size: 10vw;  
+  color: #553f4b;
+  font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
