new website, new me

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
   text-transform: uppercase;
 }
 
-.nav-about-me li {
+/*.nav-about-me li {
   padding: 5px;
   display: inline;
 }
@@ -72,7 +72,7 @@
   color: #ffffff;
   font-size: 16px;
   text-transform: uppercase;
-}
+}*/
 
 
 
