new website, new me

--- a/main.css
+++ b/main.css
@@ -1,78 +1,21 @@
-.nav-home li {
+.nav li {
   padding: 5px;
   display: inline;
 }
-.nav-home .navbar-header {
+.nav .navbar-header {
   font-size: 24px;
 }
-.nav-home .container {
-  color: #283018;
-  padding: 14px 30px;
-  text-transform: uppercase;
-}
-
-.nav-home a{
-  color: #283018;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-
-/*.nav-about-me li {
-  padding: 5px;
-  display: inline;
-}
-.nav-about-me .navbar-header {
-  font-size: 24px;
-}
-.nav-about-me .container {
-  color: #553f4b;
-  padding: 14px 30px;
-  text-transform: uppercase;
-}
-
-.nav-about-me a{
-  color: #553f4b;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-
-.nav-resume li {
-  padding: 5px;
-  display: inline;
-}
-.nav-resume .navbar-header {
-  font-size: 24px;
-}
-.nav-resume .container {
+.nav .container {
   color: #ffffff;
   padding: 14px 30px;
   text-transform: uppercase;
 }
 
-.nav-resume a{
+.nav a{
   color: #ffffff;
   font-size: 16px;
   text-transform: uppercase;
 }
-
-.nav-contact-me li {
-  padding: 5px;
-  display: inline;
-}
-.nav-contact-me .navbar-header {
-  font-size: 24px;
-}
-.nav-contact-me .container {
-  color: #ffffff;
-  padding: 14px 30px;
-  text-transform: uppercase;
-}
-
-.nav-contact-me a{
-  color: #ffffff;
-  font-size: 16px;
-  text-transform: uppercase;
-}*/
 
 
 
