new website, new me

--- a/main.css
+++ b/main.css
@@ -106,6 +106,12 @@
   color: #ffffff;
 }
 
+.resume .button {
+  font-size: 20px;
+  color: #ffffff;
+  border-color: #ffffff;
+}
+
 .contact-me {
   height: 100vh;
   background-image:url('Disneyland.jpg');
