--- a/main.css
+++ b/main.css
@@ -109,6 +109,8 @@
 .resume a {
   font-size: 20px;
   color: #ffffff;
+  border-style: solid;
+  border-radius: 2px:;
   border-color: #ffffff;
 }
 
