--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3117,7 +3117,7 @@ fieldset[disabled] .btn-default.focus {
   background-color: #333;
 }
 .btn-primary {
-  color: #fff;
+  color: #000000;
   background-color: #ffffff;
   border-color: #2e6da4;
 }
