--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3117,8 +3117,8 @@ fieldset[disabled] .btn-default.focus {
   background-color: #333;
 }
 .btn-primary {
-  color: #fff;
-  background-color: #337ab7;
+  color: #000000;
+  background-color: #ffffff;
   border-color: #2e6da4;
 }
 .btn-primary:focus,
