--- a/main.css
+++ b/main.css
@@ -6,13 +6,13 @@
   font-size: 24px;
 }
 .nav .container {
-  color: #486e1b;
+  color: #774214;
   padding: 14px 30px;
   text-transform: uppercase;
 }
 
 .nav a{
-  color: #486e1b;
+  color: #774214;
   font-size: 16px;
   text-transform: uppercase;
 }
@@ -95,7 +95,7 @@
 }
 
 .resume h1 {
-  color: #486e1b;
+  color: #774214;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -103,7 +103,7 @@
 
 .resume p {
   font-size: 30px;
-  color: #486e1b;
+  color: #774214;
 }
 
 .contact-me {
@@ -120,7 +120,7 @@
 }
 
 .contact-me h1 {
-  color: #486e1b;
+  color: #774214;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -128,6 +128,6 @@
 
 .contact-me p {
   font-size: 30px;
-  color: #486e1b;
+  color: #774214;
 }
 
