--- a/main.css
+++ b/main.css
@@ -6,13 +6,13 @@
   font-size: 24px;
 }
 .nav .container {
-  color: #774214;
+  color: #6e5e3c;
   padding: 14px 30px;
   text-transform: uppercase;
 }
 
 .nav a{
-  color: #774214;
+  color: #6e5e3c;
   font-size: 16px;
   text-transform: uppercase;
 }
@@ -71,7 +71,7 @@
 }
 
 .about-me h1 {
-  color: #774214;
+  color: #6e5e3c;
   font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -79,7 +79,7 @@
 
 .about-me p {
   font-size: 1.2vw;
-  color: #774214;
+  color: #6e5e3c;
 }
 
 .resume {
