--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@
 }
 
 .resume h1 {
-  color: #ffffff;
+  color: #6e5e3c;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -103,7 +103,7 @@
 
 .resume p {
   font-size: 30px;
-  color: #ffffff;
+  color: #6e5e3c;
 }
 
 .contact-me {
@@ -120,7 +120,7 @@
 }
 
 .contact-me h1 {
-  color: #ffffff;
+  color: #6e5e3c;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -128,6 +128,6 @@
 
 .contact-me p {
   font-size: 30px;
-  color: #ffffff;
+  color: #6e5e3c;
 }
 
