new website, new me

--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@
 }
 
 .title h1 {
-  color: #283018;
+  color: #6e5e3c;
   font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -42,7 +42,7 @@
 
 .title p {
   font-size: 2vw;
-  color: #283018;
+  color: #6e5e3c;
 }
 /*30px*/
 
