new website, new me

--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@
   font-size: 2vw;
   color: #6e5e3c;
 }
-/*30px*/
+/*283018*/
 
 .about-me {
   height: 100vh;
@@ -125,7 +125,7 @@
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
-
+/*#ffffff*/
 .contact-me p {
   font-size: 30px;
   color: #6e5e3c;
