new website, new me

--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@
 }
 
 .resume h1 {
-  color: #6e5e3c;
+  color: #c0c0c0;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -103,7 +103,7 @@
 
 .resume p {
   font-size: 30px;
-  color: #6e5e3c;
+  color: #c0c0c0;
 }
 
 .contact-me {
