--- a/main.css
+++ b/main.css
@@ -6,13 +6,13 @@
   font-size: 24px;
 }
 .nav .container {
-  color: #3e5328;
+  color: #449d44;
   padding: 14px 30px;
   text-transform: uppercase;
 }
 
 .nav a{
-  color: #3e5328;
+  color: #449d44;
   font-size: 16px;
   text-transform: uppercase;
 }
@@ -32,7 +32,7 @@
 }
 
 .title h1 {
-  color: #3e5328;
+  color: #449d44;
   font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -42,7 +42,7 @@
 
 .title p {
   font-size: 2vw;
-  color: #3e5328;
+  color: #449d44;
 }
 /*283018*/
 
@@ -71,7 +71,7 @@
 }
 
 .about-me h1 {
-  color: #3e5328;
+  color: #449d44;
   font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -79,7 +79,7 @@
 
 .about-me p {
   font-size: 1.2vw;
-  color: #3e5328;
+  color: #449d44;
 }
 
 .resume {
@@ -95,7 +95,7 @@
 }
 
 .resume h1 {
-  color: #3e5328;
+  color: #449d44;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -103,7 +103,7 @@
 
 .resume p {
   font-size: 30px;
-  color: #3e5328;
+  color: #449d44;
 }
 
 .contact-me {
@@ -120,7 +120,7 @@
 }
 
 .contact-me h1 {
-  color: #3e5328;
+  color: #449d44;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -128,6 +128,6 @@
 /*ffffff*/
 .contact-me p {
   font-size: 30px;
-  color: #3e5328;
+  color: #449d44;
 }
 
