added cs 184 projects

--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@
 .title { 
   height: 100vh;
   background-image:url('San_Francisco.jpg');
+  webkit-filter: grayscale(100%);
   background-repeat: no-repeat;
   background-size: cover;
 }
