--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@
 
 .title { 
   height: 100vh;
-  background-image:url('San_Francisco.jpg');
+  /*background-image:url('San_Francisco.jpg');*/
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #000000;
