--- a/main.css
+++ b/main.css
@@ -23,8 +23,14 @@
 
 .title { 
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.4);
   background-image:url('San_Francisco.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.title { 
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
   background-repeat: no-repeat;
   background-size: cover;
 }
